--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
-    <h1>Hi, {{ user.nickname }}!</h1>
-    {% for post in posts %}
-    <div><p>{{ post.author.nickname }} says: <b>{{ post.body }}</b></p></div>
-    {% endfor %}
+    <h1>Flask Exemplar</h1>
+    <p>
+      <h2>View Examples</h2>
+      <table>
+	<tr><td>blah</td><td>blah2</td></tr>
+      </table>      
 {% endblock %}
